kubernetes/argo-cd/projects/nebius/production-hm/vllm/environments/production/kubernetes-manifests/hm-vllm-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-vllm-ingress
  namespace: production-hm-vllm
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: vllm.hongbomiao.com
  labels:
    app.kubernetes.io/name: hm-vllm
    app.kubernetes.io/part-of: production-hm-vllm
spec:
  rules:
    - host: vllm.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vllm-router-service
                port:
                  number: 80
  tls:
    - hosts:
        - vllm.hongbomiao.com
      secretName: hm-vllm-certificate
